Lots o' changes. *Fixing some focus and timing problems *adding Open Site... button and method *changing up some enabled/disabled bindings *shortening pref pane visible name

--- a/Info.plist
+++ b/Info.plist
@@ -27,7 +27,7 @@
 	<key>NSPrefPaneIconFile</key>
 	<string>PassengerPaneCocoaPref.tiff</string>
 	<key>NSPrefPaneIconLabel</key>
-	<string>PassengerPaneCocoa</string>
+	<string>Passenger Config</string>
 	<key>NSPrincipalClass</key>
 	<string>PassengerPaneCocoaPref</string>
 </dict>
