adding Passenger config to httpd conf file and adding sample to ConfigFile class.

--- a/httpd-passengerpanecocoa.conf
+++ b/httpd-passengerpanecocoa.conf
@@ -1,6 +1,9 @@
 # Added by PassengerPaneCocoa
-# Make sure to include the Passenger configuration (the LoadModule,
-# PassengerRoot, and PassengerRuby directives) before this section.
+
+LoadModule passenger_module /Library/Ruby/Gems/1.8/gems/passenger-2.2.15/ext/apache2/mod_passenger.so
+PassengerRoot /Library/Ruby/Gems/1.8/gems/passenger-2.2.15
+PassengerRuby /System/Library/Frameworks/Ruby.framework/Versions/1.8/usr/bin/ruby
+   
 <IfModule passenger_module>
   NameVirtualHost *:80
   <VirtualHost *:80>
