Adding PassengerShared files for constants and the like.
Adding in basic config checking, still not fully wired up yet.

--- a/httpd-passengerpanecocoa.conf
+++ b/httpd-passengerpanecocoa.conf
@@ -1,7 +1,7 @@
 # Added by PassengerPaneCocoa
 
-LoadModule passenger_module /Library/Ruby/Gems/1.8/gems/passenger-2.2.15/ext/apache2/mod_passenger.so
-PassengerRoot /Library/Ruby/Gems/1.8/gems/passenger-2.2.15
+LoadModule passenger_module /Library/Ruby/Gems/1.8/gems/passenger-current/ext/apache2/mod_passenger.so
+PassengerRoot /Library/Ruby/Gems/1.8/gems/passenger-current
 PassengerRuby /System/Library/Frameworks/Ruby.framework/Versions/1.8/usr/bin/ruby
    
 <IfModule passenger_module>
