--- a/httpd-passengerpanecocoa.conf
+++ b/httpd-passengerpanecocoa.conf
@@ -6,7 +6,7 @@ PassengerRoot /Library/Ruby/Gems/1.8/gems/passenger-current
 PassengerRuby /System/Library/Frameworks/Ruby.framework/Versions/1.8/usr/bin/ruby
    
 <IfModule passenger_module>
-  NameVirtualHost *:80
+  NameVirtualHost 127.0.0.1:80
   <VirtualHost *:80>
     ServerName _default_
   </VirtualHost>
